--- a/listaTarefas/docker/DockerFile
+++ b/listaTarefas/docker/DockerFile
@@ -2,5 +2,12 @@ FROM eclipse-temurin:21-jre
 WORKDIR /app
 COPY target/tarefas-1.0.0.jar app.jar
 RUN ./mvnw clean package -DskipTests
+
+
+FROM eclipse-temurin:21-jre
+WORKDIR /app
+
+
+COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/app/app.jar"]
+CMD ["java", "-jar", "app.jar"]
