--- a/listaTarefas/docker/DockerFile
+++ b/listaTarefas/docker/DockerFile
@@ -1,13 +1,11 @@
-FROM eclipse-temurin:21-jre
+
+FROM eclipse-temurin:17-jdk AS builder
 WORKDIR /app
-COPY target/tarefas-1.0.0.jar app.jar
+COPY . .
 RUN ./mvnw clean package -DskipTests
 
-
-FROM eclipse-temurin:21-jre
+FROM eclipse-temurin:17-jre
 WORKDIR /app
-
-
 COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8080
 CMD ["java", "-jar", "app.jar"]
